# theghostgrid

./: .env.example  .gitignore  DECISIONS.md  README.md  eslint.config.mjs  package-lock.json  package.json
.playwright-mcp/: page-2026-05-15T23-33-40-462Z.yml  page-2026-05-15T23-34-45-861Z.yml  page-2026-05-15T23-35-53-412Z.yml  page-2026-05-15T23-42-56-407Z.yml  page-2026-05-15T23-43-07-825Z.yml  page-2026-05-15T23-43-30-835Z.yml
client/landing/: README.md  index.html  script.js  style.css
client/ops/: README.md  controls.js  index.html  script.js  style.css
client/phone/: README.md  index.html  script.js  style.css
client/screen/: README.md  index.html  render.js  script.js  style.css
client/shared/: connection.js  design-system.css  pulse.js
docs/: 00-CONTEXT.md  00-README.md  01-requirements.md  02-design-architecture.md  03-design-protocol.md  04-design-deception.md  05-design-ai-hq-brain.md  06-build-components.md  06-implementation-plan.md  07-implementation-stack.md  08-demo-and-pitch.md  08-implementation-demo.md  10-ui-design.md  COMPLIANCE-REPORT.md  HISTORY-LOG.md  full-system-audit.md  implementation-plan.md  integration-issues.md
docs/claude-code-prompts/: 01-PROMPT-server-core.md  02-PROMPT-protocol-modules.md  04-PROMPT-hq-brain.md  (+5 more)
radios/: Cargo.toml  README.md
radios/.claude/: settings.local.json
radios/src/: adapter.rs  burst.rs  events.rs  hopping.rs  main.rs
server/: config.js  health_monitor.js  http.js  index.js  log.js  mesh_visualizer.js  phone_sim.js  radio_bridge.js  router.js  state.js  test_radio_bridge.js  websocket.js
(+36 files in other folders)
